#4 - Binary Objects na Web: Fazendo Download de gravações e publicação na Web

--- a/public/pages/room/index.html
+++ b/public/pages/room/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Zoom Clone - EW</title>
+    <title>Zoom Clone - DWR</title>
 
     <link rel="stylesheet" href="deps/bootstrap.min.css" />
     <link rel="stylesheet" href="deps/style.css" />
